[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/player/idle.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/player/attack_2.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/player/attack_1.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/player/attack_3.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/player/walk_1.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/player/walk_2.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/player/walk_3.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/player/walk_4.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/player/strike_1.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/player/strike_2.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/player/strike_3.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/player/hit_1.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/player/hit_2.png" type="Texture" id=14]
[ext_resource path="res://Health.tscn" type="PackedScene" id=15]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 6.25557, 8.19391 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "strike",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "hit",
"speed": 12.0
} ]

[node name="Player" type="KinematicBody2D"]

position = Vector2( -0.583977, 0.291992 )
input_pickable = false
collision_layer = 1
collision_mask = 2
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 0, 1.00136e-05 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="." index="1"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="Cooldown" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="AttackRange" type="RayCast2D" parent="." index="3"]

visible = false
rotation = -1.5708
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 35 )
collision_mask = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="4"]

frames = SubResource( 3 )
animation = "idle"

[node name="HUD" parent="." index="5" instance=ExtResource( 15 )]

[connection signal="health_changed" from="." to="HUD" method="change_health"]

[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]


